--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -1,9 +1,8 @@
 name: Semantic Release
 
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: '0 1 * * 1'
   # 可选：允许手动触发工作流
   workflow_dispatch:
 
